k8s-websocket.yaml
# Install ingress-nginx controller
# kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v0.44.0/deploy/static/provider/cloud/deploy.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: websocket-scale
  name: websocket-scale
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: redis
  name: redis
  namespace: websocket-scale
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  strategy: {}
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - image: redis:latest
        name: redis
        ports:
        - containerPort: 6379
        resources:
          requests:
            cpu: 256m
            memory: 512Mi
          limits:
            cpu: 512m
            memory: 768Mi
        volumeMounts:
        - name:  redis-pv-storage
          mountPath:  /data
      volumes:
      - name: redis-pv-storage
        persistentVolumeClaim:
          claimName: redis-pv-claim
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: redis-cip
  namespace: websocket-scale
spec:
  selector:
    app: redis
  type: ClusterIP
  ports:
  - name: redis-cip
    protocol: TCP
    port: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: websocketserver
  name: websocketserver
  namespace: websocket-scale
spec:
  replicas: 3
  selector:
    matchLabels:
      app: websocketserver
  strategy: {}
  template:
    metadata:
      labels:
        app: websocketserver
    spec:
      containers:
      - image: jpbraga/wss
        name: wss
        ports:
        - containerPort: 8080
        - containerPort: 80
        resources:
          requests:
            cpu: 128m
            memory: 128Mi
          limits:
            cpu: 256m
            memory: 256Mi
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: websocketserver-cip
  namespace: websocket-scale
spec:
  selector:
    app: websocketserver
  type: ClusterIP
  ports:
  - name: websocketserver-cip
    protocol: TCP
    port: 8080
  - name: websocketserver-cip-rest
    protocol: TCP
    port: 80
---
#Not meant to be publicly accessible - backend integration purposes
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ws-serverfinder-proxy
  namespace: websocket-scale
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /serverfinder(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: serverfinder-cip
            port:
              number: 3000
---
#Meant to be publicly accessible by the clients
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ws-service-proxy
  namespace: websocket-scale
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.org/websocket-services: "websocketserver-cip"
spec:
  rules:
  - http:
      paths:
      - path: /wss(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: websocketserver-cip
            port:
              number: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: serverfinder
  name: serverfinder
  namespace: websocket-scale
spec:
  replicas: 2
  selector:
    matchLabels:
      app: serverfinder
  strategy: {}
  template:
    metadata:
      labels:
        app: serverfinder
    spec:
      containers:
      - image: jpbraga/serverfinder
        name: serverfinder
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: 128m
            memory: 128Mi
          limits:
            cpu: 256m
            memory: 256Mi
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: serverfinder-cip
  namespace: websocket-scale
spec:
  selector:
    app: serverfinder
  type: ClusterIP
  ports:
  - name: serverfinder-cip
    protocol: TCP
    port: 3000
